--- a/app/src/main/res/layout/activity_flash_cards.xml
+++ b/app/src/main/res/layout/activity_flash_cards.xml
@@ -56,5 +56,30 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"></LinearLayout>
+        android:layout_weight="2"
+        android:weightSum="1">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Your Answer Here"
+            android:id="@+id/txtAnswerPrompt"
+            android:textAlignment="center"
+            android:layout_weight="0.12" />
+
+        <EditText
+            android:layout_width="75dp"
+            android:layout_height="36dp"
+            android:id="@+id/txtboxAnswer"
+            android:paddingTop="50dp"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:id="@+id/btnSubmit"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 </LinearLayout>
